syntax = "proto3";
package nexa.reaction.v1;
option go_package = "nexa/proto/gen/go/reaction/v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "common/paged.proto";

service ReactionService {
  rpc Like(LikeRequest) returns (google.protobuf.Empty);
  rpc Dislike(DislikeRequest) returns (google.protobuf.Empty);
  // Get all users liked the item (post/comments)
  rpc GetItems(GetItemReactionsRequest) returns (GetItemReactionsResponse);
  rpc GetCount(GetCountRequest) returns (GetCountResponse);
  // Delete items reactions
  rpc DeleteItems(DeleteItemsReactionsRequest) returns (google.protobuf.Empty);

  // Remove all likes created by the user
  rpc ClearUsers(ClearUsersReactionsRequest) returns (google.protobuf.Empty);
}

enum Type {
  POST = 0;
  COMMENT = 1;
}

enum ReactionType {
  LIKE = 0;
  DISLIKE = 1;
}

message Reaction {
  string user_id = 1;
  ReactionType reaction_type = 2;
  google.protobuf.Timestamp created_at = 3;
}

message LikeRequest {
  Type item_type = 1;
  string item_id = 2;
}

message DislikeRequest {
  Type item_type = 1;
  string item_id = 2;
}

message GetItemReactionsRequest {
  Type item_type = 1;
  string item_id = 2;
  common.PagedElementInput details = 3;
}

message GetItemReactionsResponse {
  Type item_type = 1;
  string item_id = 2;
  repeated Reaction reactions = 3;
  common.PagedElementOutput details = 4;
}

message GetCountRequest {
  Type item_type = 1;
  repeated string item_ids = 2;
}

message Count {
  uint64 total_likes = 1;
  uint64 total_dislikes = 2;
}

message GetCountResponse {
  repeated Count counts = 1;
}

message ClearUsersReactionsRequest {
  string user_id = 1;
}

message DeleteItemsReactionsRequest {
  Type item_type = 1;
  repeated string item_ids = 2;
}